# Quokka-Agent

./: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
config/: config.yaml
quokka/: __init__.py  __main__.py  agent.py  cli.py
quokka/core/: __init__.py  config.py  logger.py  types.py
quokka/executor/: __init__.py  executor.py
quokka/llm/: __init__.py  base.py  ollama_client.py  openrouter_client.py  router.py
quokka/memory/: __init__.py  session.py  task_queue.py
quokka/multimodal/: __init__.py  handler.py
quokka/planner/: __init__.py  planner.py
quokka/security/: __init__.py  security.py
quokka/tools/: __init__.py  base.py  file_ops.py  obsidian.py  pdf_handler.py  shell_exec.py  web_fetch.py
quokka/transport/: __init__.py  telegram.py
